# WCSimDataTools

./: .gitignore  README.md  env.yaml  pyproject.toml
.github/workflows/: python-package-conda.yml  python-package-unittest.yml
job_submission/: generate_task_files.jl  task_template.sh
src/conversion/: descriptions.py  hdf5_to_csv.py  root_to_hdf5.py
src/wcsimreader/: utils.py
tests/: test_convert.py  test_wcsimreader.py
