[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wcsim-hdf5"
version = "0.0.1"
authors = [
    {name = "Gonzalo Díaz López", email = "gdiazlop@lpnhe.in2p3.fr"},
]
dependencies = [
    "numpy",
    "tables",
    "uproot"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["conversion/descriptions.py"]

[project.scripts]
root-to-hdf5 = "conversion.root_to_hdf5:main"
hdf5-to-csv = "conversion.hdf5_to_csv:main"

